--- a/task7/vote.html
+++ b/task7/vote.html
@@ -28,21 +28,96 @@
                 <div class="user-name">水民</div>
                 <div class="user-num">1号</div>
                 <div class="user-option">
-                    <div class="user-kill"></div>
-                    <div class="user-search"></div>
-                    <div class="user-target"></div>
-                    <div class="user-rescue"></div>
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                    <!-- <div class="user-kill">
+                    </div><div class="user-search">
+                    </div><div class="user-target">
+                    </div><div class="user-rescue"></div> -->
                 </div>
             </div>
-            
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+                <div class="user-name">水民</div>
+                <div class="user-num">2号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">警察</div>
+                <div class="user-num">3号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">法官</div>
+                <div class="user-num">4号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">狙击手</div>
+                <div class="user-num">5号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">医生</div>
+                <div class="user-num">6号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">杀手</div>
+                <div class="user-num">7号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">水民</div>
+                <div class="user-num">8号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">水民</div>
+                <div class="user-num">9号</div>
+                <div class="user-option">
+                    <img class="user-kill" src="img/vote-kill.png" alt="杀人">
+                    <img class="user-search" src="img/vote-search.png" alt="查看">
+                    <img class="user-target" src="img/vote-target.png" alt="锁定">
+                    <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
+                </div>
+            </div>
         </div>
         <div class="bar">
             <div class="bar-block"></div>
