完成两个页面：首页+投票

--- a/task7/vote.html
+++ b/task7/vote.html
@@ -32,10 +32,6 @@
                     <img class="user-search" src="img/vote-search.png" alt="查看">
                     <img class="user-target" src="img/vote-target.png" alt="锁定">
                     <img class="user-rescue" src="img/vote-rescue.png" alt="医治">
-                    <!-- <div class="user-kill">
-                    </div><div class="user-search">
-                    </div><div class="user-target">
-                    </div><div class="user-rescue"></div> -->
                 </div>
             </div>
             <div class="user">
@@ -119,13 +115,10 @@
                 </div>
             </div>
         </div>
-        <div class="bar">
-            <div class="bar-block"></div>
-            <div class="bar-block"></div>
-            <div class="bar-block"></div>
-        </div>
-    </div>
-    <div class="footer">
+        <div class="bar-block"></div>
+        <div class="bar-block"></div>
+        <div class="bar-block small"></div>
+        <div class="bar"></div>
         <button class="btn_vote .clear-btn-style">投死</button>
     </div>
 </body>
