完成第三个页面及页面间的跳转

--- a/task7/index.html
+++ b/task7/index.html
@@ -13,22 +13,22 @@
     </div>
     <div class="container">
         <div class="last-game">
-            <p class="abs-center">上次游戏：捉鬼猜词版</p>
+            <a href="vote.html" class="abs-center">上次游戏：捉鬼猜词版</a>
             <div class="goback-img vertical-center"></div>
         </div>
         <div class="select">
             <div class="sel-header">抓鬼游戏</div>
             <ul class="sel-list">
                 <li>
-                    <div class="version">简化版</div>
+                    <div class="version"><a href="vote.html">简化版</a></div>
                     <p class="user-num">有1133个用户正在玩此游戏</p>
                 </li>
                 <li>
-                    <div class="version">猜词版</div>
+                    <div class="version"><a href="vote.html">猜词版</a></div>
                     <p class="user-num">有1133个用户正在玩此游戏</p>
                 </li>
                 <li>
-                    <div class="version">白痴版</div>
+                    <div class="version"><a href="vote.html">白痴版</a></div>
                     <p class="user-num">有1133个用户正在玩此游戏</p>
                 </li>
             </ul>
