--- a/task7/vote.html
+++ b/task7/vote.html
@@ -119,7 +119,7 @@
         <div class="bar-block"></div>
         <div class="bar-block small"></div>
         <div class="bar"></div>
-        <button class="btn_vote .clear-btn-style">投死</button>
+        <button class="btn_vote .clear-btn-style"><a href="result.html">投死</a></button>
     </div>
 </body>
 </html>
