--- a/task7/vote.html
+++ b/task7/vote.html
@@ -158,7 +158,7 @@
         </div>
     </div>
     <div class="footer">
-        <button class="btn_vote .clear-btn-style"><a href="result.html">投死</a></button>
+       <a class="btn_a" href="result.html"><button class="btn_vote .clear-btn-style">投死</button></a>
     </div>
 </body>
 </html>
